# advancedGraphics

./: .gitignore  README.md
CleanerVersion/: CMakeLists.txt
CleanerVersion/shaders/: dir_light_pass.fs  shader.fs  texture_fragment_shader.glsl  texture_vertex_shader.glsl
CleanerVersion/src/: DeferredShading.cpp  DeferredShading.h  Engine.h  Shader.cpp  Shader.h  Technique.cpp  camera.cpp  ds_dir_light_pass_tech.cpp  graphics.cpp  graphics.h  input.h  main.cpp  mesh.h  skybox.cpp
Final/: CMakeLists.txt
Final/shaders/: billboardFS.glsl  billboardVS.glsl  dir_light_pass.vs  flag.fs  flag.vs  geometry_pass.fs  grassFS.glsl  grassGS.glsl  grassVS.glsl  lighting.fs  null_technique.fs  particleGS.glsl  particles_render.fs  particles_render.gs  particles_render.vs  particles_update.gs  particles_update.vs  projector.fs  projector.vert  projector2.fs  shader.vs  terrain_fragment.glsl  terrain_vertex.glsl  water.vs  waterFS.glsl  waterVS.glsl  waterVS.vs
Final/src/: Engine.cpp  Engine.h  Final.cpp  Final.h  Flag.cpp  Flag.h  GBuffer.h  Model.cpp  MousePicker.cpp  MousePicker.h  ParticleSystemRender.cpp  ParticleSystemRender.h  ParticleSystemUpdate.cpp  ParticleSystemUpdate.h  Plane.cpp  Plane.h  Program.h  Projector.cpp  Projector.h  RandomTexture.cpp  RandomTexture.h  Shader.cpp  Shader.h  Technique.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Vertex.h  billboard_tech.cpp  camera.cpp  ds_geom_pass_tech.cpp  ds_geom_pass_tech.h  ds_point_light_pass_tech.h  ds_spot_light_pass_tech.cpp  ds_spot_light_pass_tech.h  gishandler.cpp  gishandler.h  graphics.cpp  graphics.h  (+16 more)
TerrainTest/: CMakeLists.txt
TerrainTest/shaders/: billboardGS.glsl  billboardVS.glsl  dir_light_pass.fs  flag.fs  flag.vs  geometry_pass.fs  geometry_pass.vs  grassFS.glsl  grassGS.glsl  grassVS.glsl  linefrag.shader  particleGS.glsl  particleVS.glsl  point_light_pass.fs  projector.frag  skybox.fs  spot_light_pass.fs  terrain.frag  water.fs  waterVS.glsl
TerrainTest/src/: Engine.h  Flag.cpp  Flag.h  GBuffer.cpp  GBuffer.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Program.cpp  RandomTexture.cpp  RandomTexture.h  Simulation.cpp  Simulation.h  Technique.cpp  Terrain.cpp  Terrain.h  TerrainShader.cpp  TerrainShader.h  Texture.h  Vertex.h  billboard_tech.h  buffer.cpp  buffer.h  camera.cpp  camera.h  ds_dir_light_pass_tech.h  ds_geom_pass_tech.cpp  ds_point_light_pass_tech.cpp  gishandler.cpp  gishandler.h  graphics.cpp  graphics.h  grass_tech.cpp  grass_tech.h  particle_system.cpp  particle_system.h  pbuffer.cpp  pbuffer.h  projector.cpp  (+8 more)
test1/: CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Vertex.h  camera.cpp  camera.h  color_fragment_shader.glsl  color_vertex_shader.glsl  ds_geom_pass_tech.cpp  ds_geom_pass_tech.h  firstTest  fragment.glsl  gbuffer.cpp  gbuffer.h  geometry_pass.vs  main.cpp  math_3d.h  ogldev_util.cpp  ogldev_util.h  shader.cpp  shader.h  technique.cpp  technique.h  texture_fragment_shader.glsl  texture_vertex_shader.glsl  vertex.glsl
